# weechat-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: main.rs  weechat.rs
src/gui/gtk3/: mod.rs
src/weechat/: client.rs  parser.rs
